--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
     <head>
         <title>Space Conflict</title>
+        <link rel="stylesheet" href="style.css">
+        <script src="space.js"></script>
     </head>
 
     <body onload="init()">
