--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     </head>
 
     <body onload="init()">
-        <h1>Space Conflict</h1>
-        <canvas id="canvas" width="720" height="480"></canvas>
+        <div class="title">
+            <h1>Space Conflict</h1>
+        </div>
+
+        <canvas class="canvas" id="canvas" width="720" height="480"></canvas>
     </body>
 </html>
