startscreen & enemy/rocket animation & bugfixes

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>Space Conflict</title>
         <link rel="stylesheet" href="style.css">
         <script src="space.js"></script>
+        <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     </head>
 
     <body onload="init()">
@@ -11,5 +12,11 @@
         </div>
 
         <canvas class="canvas" id="canvas" width="720" height="480"></canvas>
+
+        <div class="title">
+            <h3> Arrows = Move </h3>
+            <h3> Space = Shoot </h3>
+            <h3> D = Missile </h3>
+        </div>
     </body>
 </html>
