--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="title">
             <h3> Arrows = Move </h3>
             <h3> Space = Shoot </h3>
-            <h3> D = Missile </h3>
+            <h3> S = Missile </h3>
         </div>
     </body>
 </html>
