--- a/start.html
+++ b/start.html
@@ -17,6 +17,7 @@
             <a href="#">Start Game</a>
             <a href="#">Impressum</a>
             <a href="#">Datenschutz</a>
+            <a href="#">Highscore</a>
         </div>
 
     </div>
