--- a/index.html
+++ b/index.html
@@ -1,22 +1,36 @@
 <html>
-    <head>
-        <title>Space Conflict</title>
-        <link rel="stylesheet" href="style.css">
-        <script src="space.js"></script>
-        <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    </head>
 
-    <body onload="init()">
-        <div class="title">
-            <h1>Space Conflict</h1>
-        </div>
+<head>
+    <title>Space Conflict</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="space.js"></script>
+    <link
+        href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+        <link rel="shortcut icon" type="image/x-icon" href="./img/rocket_normal.png">
+</head>
 
-        <canvas class="canvas" id="canvas" width="720" height="480"></canvas>
+<body onload="init()">
+    <div class="title">
+        <h1>Space Conflict</h1>
+    </div>
+<div class="gameover menu">
+    <h2>Game Over</h2>
+    <input placeholder="Please enter your name"> 
+    <a onclick="save_highscore()">Back to Menu</a>
+</div>
 
-        <div class="title">
-            <h3> Arrows = Move </h3>
-            <h3> Space = Shoot </h3>
-            <h3> S = Missile </h3>
-        </div>
-    </body>
+    <canvas class="canvas" id="canvas" width="720" height="480"></canvas>
+
+    <div class="title">
+        <h3> Arrows = Move </h3>
+        <h3> Space = Shoot </h3>
+        <h3> S = Missile </h3>
+    </div>
+    <div class="menu exit-game">
+        <a href="start.html">Exit Game</a>
+    </div>
+
+</body>
+
 </html>
