--- a/start.html
+++ b/start.html
@@ -10,7 +10,7 @@
         <link rel="shortcut icon" type="image/x-icon" href="./img/rocket_normal.png">
 </head>
 
-<body>
+<body onload="loadHighscores()">
     <div class="overall_div">
         <div class="overall_center">
             
@@ -33,10 +33,10 @@
             </div>
             <div class="highscore">
                 <div>
-                    <p id="name1">Name1</p>
-                    <p id="name1">Name2</p>
-                    <p id="name1">Name3</p>
-                    <p id="name1">Name4</p>
+                    <p id="name1">Player</p>
+                    <p id="name2">Player</p>
+                    <p id="name3">Player</p>
+                    <p id="name4">Player</p>
                 </div>
                 <div>
                     <p id="score1">000</p>
