--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Space Conflict</title>
     <link rel="stylesheet" href="style.css">
     <script src="space.js"></script>
+    <meta http-equiv='Content-Type' content='text/html;charset=UTF-8'>
     <link
         href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
@@ -11,6 +12,10 @@
 </head>
 
 <body onload="init()">
+    <div class="mobile-overlay">
+        <h1>Not supported on mobile devices</h1>
+        <p>This game should only be played on your computer or laptop. You need a keyboard! 😉</p>
+    </div>
     <div class="title">
         <h1>Space Conflict</h1>
     </div>
